--- a/index.html
+++ b/index.html
@@ -153,24 +153,42 @@ Passionate about Travel! See the best travel tips from Brazil and several incred
 <br>
 </p>
 <a href="https://bitbucket.org/Jennifer_Skaggs/travel/src/master/index.html">Bitbucket_Index</a></p><br>
-<a href="https://app.netlify.com/sites/partiupelomundo-blog">Netlify</a></p><br>
-<a href="https://partiupelomundo-blog.netlify.app/">NetlifyApp</a></p><br>
+<a href="https://app.netlify.com/sites/jenniferskaggs-blog">Netlify</a></p><br>
+<a href="https://jenniferskaggs-blog.netlify.app">NetlifyApp</a></p><br>
 <a href="https://gitlab.com/jenniferskaggs">Github</a></p><br>
-<a href="https://github.com/partiupelomundo-blog/Partiupelomundo">Github_blog</a></p><br>
-<a href="https://partiupelomundo-blog.github.io/Partiupelomundo">Github_io</a></p><br>
-<a href="https://github.com/partiupelomundo-blog/Partiupelomundo/tree/master">Github_Master</a></p><br>
+<a href="https://github.com/JenniferSkaggs-Blog/travel">Github_blog</a></p><br>
+<a href="https://jenniferskaggs-blog.github.io/travel/">Github_io</a></p><br>
+<a href="https://github.com/JenniferSkaggs-Blog/travel/blob/main/index.html">Github_Master</a></p><br>
 <a href="https://gitlab.com/jenniferskaggs/travel-blog">Gitlab</a></p><br>
-<a href="https://gitlab.com/Partiupelomundo/partiupelomundo/-/blob/master">Gitlab_Master</a></p><br>
-<a href="https://partiupelomundo.gitlab.io/partiupelomundo">Gitlab_io</a></p><br>
-<a href="https://neocities.org/site/partiupelomundo">Neocities_Site</a></p><br>
-<a href="https://partiupelomundo.neocities.org/">Neocities</a></p><br>
-<a href="https://codepen.io/partiupelomundo-blog">Codepen</a></p><br>
-<a href="https://codepen.io/partiupelomundo-blog/details/gOMLMEY">Codepen_Project</a></p><br>
-<a href="https://partiupelomundo-1abf3.firebaseapp.com/">Firebase</a></p><br>
-<a href="https://partiupelomundo-1abf3.web.app">Firebase_app</a></p><br>
-<a href="https://firebasestorage.googleapis.com/v0/b/partiupelomundo-1abf3.appspot.com/o/index.html?alt=media&token=b690c749-533a-42db-b50f-76068c43bbdc">Firebase_index</a></p><br>
-<a href="https://firebasestorage.googleapis.com/v0/b/partiupelomundo-1abf3/o/index.html?alt=media&token=edc5df69-37e5-41c2-a183-b1962542f865">Firebase_index1</a></p><br>
+<a href="https://gitlab.com/jenniferskaggs/travel-blog/-/blob/master/index.html">Gitlab_Master</a></p><br>
+<a href="https://jennifer_skaggs.gitlab.io/travel-blog/">Gitlab_io</a></p><br>
+<a href="https://neocities.org/site/jenniferskaggs-blog">Neocities_Site</a></p><br>
+<a href="https://jenniferskaggs-blog.neocities.org">Neocities</a></p><br>
+<a href="https://codepen.io/jenniferskaggs-blog">Codepen</a></p><br>
+<a href="https://codepen.io/jenniferskaggs-blog/pen/WNxRLYp">Codepen_Pen</a></p><br>
+<a href="https://firebasestorage.googleapis.com/v0/b/travel-d4316.appspot.com/o/index.html?alt=media&token=406345ea-4a4f-4a53-b853-d86c877684dc">Firebase_index</a></p><br>
 
+
+
+
+
+
+<h3>Jennifer Skaggs on Bing</h3>
+<script type="text/javascript">
+var a = document.createElement('iframe');
+a.src = "https://www.bing.com/search?q=Jennifer+skaggs+blog&qs=n&form=QBRE&sp=-1&pq=jennifer+skaggs+blog&sc=0-20&sk=&cvid=859062FE01354500A6E72BFD7BB578D6";
+a.width = "600";
+a.height = "450";
+document.querySelector('body').appendChild(a)</script>
+</article>
+</div>
+<!-- End of Article body -->
+</div>
+<footer>
+<p>Jennifer Skaggs Blog - All rights reserved.</p>
+</footer>
+</body>
+</html>
 
 
 
